# aionic

./: .gitignore  Dockerfile  Steps to start.txt  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: config.py  log_store.py  main.py
backend/ai/: provider.py
backend/analyzers/: content_gaps.py  cross_source.py  emergence.py  hype_detector.py  performance_learner.py  priority_engine.py  suggestion_generator.py  trend_detector.py
backend/api/: deps.py  main.py  schemas.py
backend/api/routers/: admin.py  collect.py  health.py  patterns.py  search.py  sources.py  stats.py  suggestions.py  trends.py
backend/collectors/: arxiv_collector.py  base.py  github_collector.py  google_trends_collector.py  hackernews_collector.py  huggingface_collector.py  newsapi_collector.py  reddit_collector.py  rss_collector.py  stackoverflow_collector.py
backend/db/: database.py  models.py  seeds.py  system_config.py
backend/processors/: categorizer.py  deduplicator.py  importance_scorer.py  normalizer.py  pipeline.py  summarizer.py  tagger.py
backend/scheduler/: jobs.py
backend/topics/: canonicalizer.py  seed_topics.py
dashboard/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/admin/: page.tsx
dashboard/src/app/patterns/: page.tsx
dashboard/src/app/search/: page.tsx
dashboard/src/app/sources/: page.tsx
dashboard/src/app/suggestions/: page.tsx
dashboard/src/app/trends/: page.tsx
dashboard/src/lib/: api.ts
(+1 files in other folders)
