[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aionic"
version = "0.1.0"
description = "AI Content Intelligence System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Config
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Scheduler
    "apscheduler>=3.10.4",
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    # HTTP client
    "httpx>=0.28.0",
    # Data collectors
    "praw>=7.8.1",
    "feedparser>=6.0.11",
    "PyGithub>=2.5.0",
    "newsapi-python>=0.2.7",
    "pytrends>=4.9.2",
    "arxiv>=2.1.3",
    # NLP / ML
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.3.0",
    "nltk>=3.9.1",
    "rapidfuzz>=3.10.1",
    "datasketch>=1.6.5",
    # Utilities
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
